style.css
/* ... */
h1 {
  margin: unset;
  grid-area: header1;
}

h2 {
  margin: 0px;
  grid-area: header2;
}

input {
  width: auto;
  padding-left: 8px;
  border-radius: 10px;
}

p {
  font-size: 10px;
}

/* @keyframes infoAnimation {
  0% {border: 1px solid rgb(96, 139, 168);}
  50% {border: 1px solid rgb(255, 0, 0);}
  100% {border: 1px solid rgb(96, 139, 168);}
} */

html {
  background-color: white;
}

.button-disabled{
  cursor: not-allowed;
  K  /* pointer-events: none; */
  border: none;
}

.centerWrapper {
  display: grid;
  grid-template-columns: 24% 45% 10% 6% 6%;
  grid-template-rows: auto auto;
  grid-gap: .3rem;
  background-color: transparent;
  border: none;
  overflow-y: scroll;
  grid-template-areas:
  '. . . . .'
  '. chooseBox . . .'
}

.monthCenterWrapper {
  display: grid;
  grid-template-columns: 6px 40px auto 40px 6px;
  grid-template-rows: auto auto;
  grid-gap: .6rem;
  background-color: transparent;
  border: none;
  overflow-y: scroll;
  grid-template-areas:
  '. clear inputbox moveToDay .'
  '. putback monthChooseBox . .'
}

.container1 {
  display: grid;
  grid-template-columns: 12% 65% 5% 11%;
  grid-template-rows: auto auto auto;
  grid-gap: .3rem;
  background-color: transparent;
  border: none;
  overflow-y: scroll;
  grid-template-areas:
  'month header1 info storage'
  '. hearts . .'
  '. messages . .';
}

/* add view css below */

/* Har denne en funktion? */
::placeholder {
  color: #788793; /* Lighter gray*/
  color: rgb(150, 150, 150);
}

.buttons {
  display: grid;
  grid-template-columns: auto auto auto auto auto;
  grid-template-rows: 50px;
}

.timeButtons {
  display: flex;
  flex-flow: wrap;
  justify-content: space-between;
  /* display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: 50px; */
}

.addContainer1 {
  display: grid;
  grid-template-columns: 5% auto 5%;
  grid-template-rows: auto auto auto;
  grid-template-areas:
  '. header1 .'
  '. header2 .'
  '. messages .';
  /* margin-top: -10px; */
}

.addContainer2 {
  display: grid;
  grid-template-columns: 51% 51%;
  /* column-gap: .2rem; */
  background-color: transparent;
  border: none;
  grid-template-areas:
  'input table'
}

.topic {
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 10px;
  padding-top: 10px;
  border-radius: 10px;
  background-color: rgba(154, 219, 240, .25);
  width: 90%;
}

/* Old .topic trying to compress addView above virtual keyboard */
/* .topic {
  padding: 7px;
  margin-bottom: -15px;
  border-radius: 10px;
  background-color: rgba(154, 219, 240, .25);
  width: 90%;
  margin-left: auto;
  margin-right: auto;
} */

.hearts {
  font-size: 1.4em;
}

.durationContainer {
  display: grid;
  grid-template-columns: 50% 45% 5%;
  grid-gap: .6rem;
  background-color: transparent;
  border: none;
  grid-template-areas:
  'input table .'
}

.timeContainer {
  display: grid;
  grid-template-columns: 40% 54% 5%;
  grid-gap: .6rem;
  background-color: transparent;
  border: none;
  grid-template-areas:
  'input table .'
}

.add {
  text-align: center;
  /* width: 10%; */
  height: 22px;
  font-size: 0.6em;
  background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9898ff);
  border: 1px solid rgb(96, 139, 168);
  border-radius: 10px;
}


.timeAdjusterTop {
  width: 30px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  background-image: none; /* linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9adbf0); */
  background-color: rgba(0, 0, 0, 0);
  position: relative;
  z-index: 10;
  top: 3px;
  border-bottom: none;
}

.timeAdjusterMiddle {
  width: 30px;
  height: 45px;
  border-radius: 10px;
  background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9898ff);
  background-color: rgba(0, 0, 0, 0);
  position: relative;
  top: -20px;
  z-index: 5;
  border: none;
}

.timeAdjusterBottom {
  width: 30px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  background-image: none; /* linear-gradient(#9adbf0, #9adbf0, #9adbf0, #9abdf0, #9898ff); */
  background-color: rgba(0, 0, 0, 0);
  position: relative;
  z-index: 10;
  top: -43px;
  border-top: none;
}

.text {
  font-weight: bold;
  margin-bottom: 4px;
  margin-top: 5px;
}

.backgroundUp {
  width: 30px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  background-image: linear-gradient(#9898ff, #9adbf0, #9adbf0, #9adbf0, #9adbf0);
  position: relative;
  top: 0px;
  z-index: 1;
  border-bottom: none;
}

.backgroundDown {
  width: 30px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  background-image: linear-gradient(#9adbf0, #9adbf0, #9adbf0, #9adbf0, #9898ff);
  position: relative;
  top: -48px;
  z-index: 1;
  border-top: none;
}

/* #page {
  height: 800px;
} */

#gainDiv {
  display: inline-flex;
  justify-content: space-between;
}

#info {
  width: 22px;
  border-radius: 20px;
}

#d1, #g1 {
  margin-left: 0px;
}

#dayView {
  /* position: relative; */ /* Needs to be relative in order for the add-button to have an absolute position with respect to the viewport and not the total page https://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/ */ */
  /* transition: all 0.4s; */

  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto auto auto;
  grid-gap: .3rem;
  background-color: white;
  border: none;
  overflow-y: scroll;
  grid-template-areas: 'head' 'wrap' 'cont';
  position: fixed;
}

/* #dayView.active {
  visibility: visible;
} */

#text1, #text2 {
  display: flex;
  grid-area: input;
  align-self: center;
  font-weight: bold;
}

#inputTimeBox {
  grid-area: input;
  width: 54px;
  height: 20px;
}

#table {
  grid-area: table;
  border-collapse: collapse;
}

#inputTaskBox {
  width: auto;
}

#inputDurationBox {
  width: 60px;
  /* height: 15px; */
}

#optional {
  font-size: 0.6em;
}

#apply {
  width: 250px;
}

#cancel {
  width: 15%;
}

#apply, #cancel {
  font-size: 0.6em;
  margin-top: 5px;
}
/* ... */

